force-app/main/default/objects/Appshark_LC1__Mapping__c/Appshark_LC1__Mapping__c.object-meta.xml
<CustomObject>
    <label>Mapping</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>