force-app/main/default/objects/Appshark_LC1__Mapping__c/fields/Appshark_LC1__Copy_to_Master__c.field-meta.xml
<CustomField>
    <fullName>Appshark_LC1__Copy_to_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy to Master</label>
    <type>Checkbox</type>
</CustomField>