force-app/main/default/objects/Appshark_LC1__Mapping__c/fields/Appshark_LC1__Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Appshark_LC1__Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>