force-app/main/default/objects/Appshark_LC1__Mapping__c/fields/Appshark_LC1__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Appshark_LC1__Page_Name__c</fullName>
    <label>Page Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>