force-app/main/default/objects/Appshark_LC1__Mapping__c/fields/Appshark_LC1__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Appshark_LC1__Target_Field__c</fullName>
    <label>Target Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>