force-app/main/default/objects/Appshark_LC1__Mapping__c/listViews/Appshark_LC1__All.listView-meta.xml
<ListView>
    <fullName>Appshark_LC1__All</fullName>
    <columns>NAME</columns>
    <columns>Appshark_LC1__Page_Name__c</columns>
    <columns>Appshark_LC1__Source_Field__c</columns>
    <columns>Appshark_LC1__Target_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>